--- a/style/style.scss
+++ b/style/style.scss
@@ -1,8 +1,8 @@
 @font-face{
     font-family: 'Ubuntu', sans-serif;
     src: url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
-    
 }
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 :root{
     --basemargin: 50px;
         @media (max-width: 600px) {
@@ -57,18 +57,77 @@ main{
     .cards-area{
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
-        grid-gap: 50px;
+        grid-gap: var(--basemargin);
         font-size: .8rem;
             .card{
                 .card-wrap{
+                    
                     img{
-                        
                         
                     }
                 }
             }
+    }
+    .load-div{
+        display: flex;
+        justify-content: center;
+            .btn{
+                background: none;
+                color: black;
+                padding-left: 40px; 
+                padding-right: 40px; 
+            }
     } 
 }   
+.singup{
+    display: flex;
+    font-family: 'Times New Roman', Times, serif;
+    background-color: #f5f5f5;
+    height: 350px;
+    width: 100%;
+    justify-content: center;
+    margin: 0;
+        .col{
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: space-evenly;
+                input{
+                    font-family: 'Roboto', sans-serif;
+                    border: none;
+                    background: none;
+                    border-bottom: 1px solid black;
+                    &:focus{
+                        outline: none;
+                    }  
+                }
+        }
+}
 footer{
-  height: 200px;
+    display: flex;
+    height: 140px;
+    background-color: #2e2e2e;
+    font-family: Arial, Helvetica, sans-serif;
+    align-items: center;
+    color: white;
+        .container{
+            justify-content: space-between;
+            .footer-left{
+                span{
+                    margin-left: 25px;
+                }
+            }  
+            .footer-right{
+                ul{
+                    padding: 0;
+                    list-style: none;
+                        li{
+                            padding-left: 25px;
+                            color: white;
+                        }
+                }
+                
+            }  
+        }
+        
 }
