--- a/style/style.css
+++ b/style/style.css
@@ -50,6 +50,10 @@ body {
   padding-right: 5%;
 }
 
+.header .navbar button {
+  margin-left: auto;
+}
+
 .header .navbar .navbar-collapse {
   font-family: 'Times New Roman', Times, serif;
   text-transform: uppercase;
@@ -93,6 +97,12 @@ main .load-div .btn {
   color: black;
   padding-left: 40px;
   padding-right: 40px;
+  -webkit-transition: 0.4s ease-in;
+  transition: 0.4s ease-in;
+}
+
+main .load-div .btn:hover {
+  background-color: #f0f0f0;
 }
 
 .singup {
@@ -125,15 +135,39 @@ main .load-div .btn {
           justify-content: space-evenly;
 }
 
+@media (max-width: 775px) {
+  .singup .col h3 {
+    font-size: 1.3rem;
+  }
+}
+
 .singup .col input {
   font-family: 'Roboto', sans-serif;
   border: none;
   background: none;
   border-bottom: 1px solid black;
+  padding-left: .5rem;
+  padding-right: .5rem;
 }
 
 .singup .col input:focus {
   outline: none;
+}
+
+@media (max-width: 775px) {
+  .singup {
+    height: 200px;
+  }
+}
+
+a {
+  color: #c3c3c3;
+  text-decoration: none;
+}
+
+a:hover, a:focus {
+  color: #ffffff;
+  text-decoration: none;
 }
 
 footer {
@@ -150,22 +184,58 @@ footer {
 }
 
 footer .container {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
-footer .container .footer-left span {
-  margin-left: 25px;
+footer .container .footer-left span:nth-child(1) {
+  margin-right: 25px;
+}
+
+footer .container .footer-right {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 footer .container .footer-right ul {
   padding: 0;
   list-style: none;
+  margin: 0;
 }
 
 footer .container .footer-right ul li {
-  padding-left: 25px;
   color: white;
+}
+
+footer .container .footer-right ul > * {
+  margin-left: 20px;
+}
+
+@media (max-width: 775px) {
+  footer .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    font-size: .8rem;
+  }
 }
 /*# sourceMappingURL=style.css.map */
