--- a/style/style.scss
+++ b/style/style.scss
@@ -33,6 +33,9 @@ body{
     .navbar{
         padding-left: 5%;
         padding-right: 5%;
+            button{
+                margin-left: auto;
+            }
             .navbar-collapse{
                 font-family: 'Times New Roman', Times, serif;
                 text-transform: uppercase;
@@ -59,14 +62,6 @@ main{
         grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
         grid-gap: var(--basemargin);
         font-size: .8rem;
-            .card{
-                .card-wrap{
-                    
-                    img{
-                        
-                    }
-                }
-            }
     }
     .load-div{
         display: flex;
@@ -76,6 +71,10 @@ main{
                 color: black;
                 padding-left: 40px; 
                 padding-right: 40px; 
+                transition: 0.4s ease-in;
+                    &:hover{
+                        background-color: rgb(240, 240, 240);
+                    }
             }
     } 
 }   
@@ -92,16 +91,36 @@ main{
             align-items: center;
             flex-direction: column;
             justify-content: space-evenly;
+                h3{
+                    @media (max-width: 775px) {
+                        font-size: 1.3rem;
+                    }
+                }
                 input{
                     font-family: 'Roboto', sans-serif;
                     border: none;
                     background: none;
                     border-bottom: 1px solid black;
+                    padding-left: .5rem;
+                    padding-right: .5rem;
                     &:focus{
                         outline: none;
                     }  
                 }
         }
+        @media (max-width: 775px) {
+            
+            height: 200px;
+        }
+}
+a {
+    color: #c3c3c3;
+    text-decoration: none;
+}
+
+a:hover, a:focus {
+    color: #ffffff;
+    text-decoration: none;
 }
 footer{
     display: flex;
@@ -111,23 +130,38 @@ footer{
     align-items: center;
     color: white;
         .container{
+            height: 100%;
+            display: flex;
+            flex-direction: row;
             justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            
             .footer-left{
-                span{
-                    margin-left: 25px;
+                
+                span:nth-child(1){
+                    margin-right: 25px;
                 }
             }  
             .footer-right{
+                align-items: center;
                 ul{
                     padding: 0;
                     list-style: none;
+                    margin: 0;
                         li{
-                            padding-left: 25px;
                             color: white;
                         }
                 }
-                
+                ul > *{
+                    margin-left: 20px;
+                }
             }  
+            @media (max-width: 775px) {
+                flex-direction: column;
+                justify-content: space-evenly;
+                font-size: .8rem;
+            }
         }
-        
+       
 }
